--- a/home page/style.css
+++ b/home page/style.css
@@ -47,7 +47,7 @@ header {
   cursor: pointer;
 }
 .video {
-  position: fixed;
+  position: absolute;
   right: 0;
   bottom: 0;
   min-width: 100%;
@@ -61,10 +61,18 @@ header {
   top: 13rem;
   left: 8rem;
   font-size: 5rem;
+  font-weight: 900;
 }
 .naslov h3 {
   position: relative;
   top: 13rem;
   font-size: 2rem;
   left: 8.2rem;
+}
+.under {
+  width: 100%;
+  height: 5rem;
+  background-color: red;
+  position: relative;
+  top: 10rem;
 }
