--- a/home page/style.css
+++ b/home page/style.css
@@ -298,3 +298,30 @@ header {
   color: #212529;
   color: inherit;
 }
+#ikonica {
+  position: fixed;
+  left: 81rem;
+  font-size: 2rem;
+  top: 35rem;
+  cursor: pointer;
+  z-index: 1000;
+}
+#welcome {
+  width: 100%;
+  height: 12rem;
+  position: absolute;
+  top: -10rem;
+}
+#welcome h1 {
+  font-size: 3rem;
+  width: 2rem;
+  position: relative;
+  left: 20rem;
+  top: 2rem;
+}
+#welcome p {
+  width: 80%;
+  position: relative;
+  top: 2rem;
+  left: 8rem;
+}
