--- a/gaits/style.css
+++ b/gaits/style.css
@@ -40,6 +40,7 @@ header {
   position: relative;
   left: 9rem;
   font-size: 1.2rem;
+  width: 24rem;
   color: black;
   cursor: pointer;
 }
@@ -149,11 +150,28 @@ header {
   cursor: pointer;
 }
 #google_translate_element {
-  position: relative;
-  left: 3rem;
+  position: absolute;
+  left: 39rem;
 }
 #google_translate_element select {
   background-color: transparent;
 
   cursor: pointer;
+}
+.nista {
+  background-color: white;
+  width: 100%;
+  height: 2rem;
+  z-index: 1;
+  position: relative;
+  top: 2.7rem;
+  left: 17rem;
+}
+.nista1 {
+  background-color: white;
+  width: 100%;
+  height: 2rem;
+  z-index: 1;
+  position: relative;
+  bottom: 0.7rem;
 }
