--- a/home page/style.css
+++ b/home page/style.css
@@ -49,9 +49,8 @@ header {
 .video {
   position: absolute;
   right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+  top: 0;
+  height: 40.1rem;
 }
 .naslov {
   width: 70%;
@@ -310,18 +309,35 @@ header {
   width: 100%;
   height: 12rem;
   position: absolute;
-  top: -10rem;
+  bottom: 45rem;
 }
 #welcome h1 {
   font-size: 3rem;
   width: 2rem;
   position: relative;
-  left: 20rem;
+  left: 27rem;
   top: 2rem;
+  text-align: center;
 }
 #welcome p {
   width: 80%;
   position: relative;
   top: 2rem;
   left: 8rem;
+  text-align: center;
+}
+#google_translate_element {
+  width: 10rem;
+  position: absolute;
+  z-index: 1;
+  bottom: 0;
+  height: 10rem;
+}
+#google_translate_element select {
+  background-color: transparent;
+  color: #12b7d4;
+  font-size: 16px;
+  border: 0px;
+
+  cursor: pointer;
 }
