--- a/home page/style.css
+++ b/home page/style.css
@@ -297,6 +297,11 @@ header {
   color: #212529;
   color: inherit;
 }
+#read3 a {
+  text-decoration: none;
+  color: #212529;
+  color: inherit;
+}
 #ikonica {
   position: fixed;
   left: 81rem;
