--- a/home page/style.css
+++ b/home page/style.css
@@ -13,6 +13,14 @@ header {
   height: 5rem;
   width: 100%;
 }
+header h1 a {
+  text-decoration: none;
+  color: white;
+}
+header h3 a {
+  text-decoration: none;
+  color: white;
+}
 .main ul {
   display: flex;
   list-style: none;
@@ -297,7 +305,7 @@ header {
   color: #212529;
   color: inherit;
 }
-#read3 a {
+#read a {
   text-decoration: none;
   color: #212529;
   color: inherit;
