--- a/breeding/style.css
+++ b/breeding/style.css
@@ -48,6 +48,10 @@ header h3 {
   color: black;
   cursor: pointer;
 }
+header h1 a {
+  color: black;
+  text-decoration: none;
+}
 .img {
   width: 70%;
   margin: auto;
@@ -80,7 +84,7 @@ header h3 {
   font-family: Neausa, Arial, Helvetica, sans-serif;
   font-synthesis: none;
   font-weight: 800;
-
+  color: #212529;
   width: 30rem;
 }
 .under p {
@@ -110,7 +114,7 @@ header h3 {
   font-family: Neausa, Arial, Helvetica, sans-serif;
   font-synthesis: none;
   font-weight: 800;
-
+  color: #212529;
   width: 30rem;
   position: relative;
   left: 13rem;
@@ -142,4 +146,12 @@ header h3 {
 }
 #aa {
   color: rgb(82, 81, 78);
+}
+#ikonica {
+  position: fixed;
+  left: 80rem;
+  font-size: 2rem;
+  top: 35rem;
+  cursor: pointer;
+  z-index: 1;
 }
