--- a/gaits/style.css
+++ b/gaits/style.css
@@ -65,7 +65,7 @@ header {
   font-size: 1.5rem;
 }
 .types h1 {
-  color: rgb(68, 74, 85);
+  color: #212529;
 }
 .types p {
   position: relative;
@@ -174,4 +174,7 @@ header {
   z-index: 1;
   position: relative;
   bottom: 0.7rem;
+}
+#gaits {
+  text-decoration: overline;
 }
