--- a/gaits/style.css
+++ b/gaits/style.css
@@ -36,6 +36,14 @@ header {
   color: black;
   cursor: pointer;
 }
+.header h1 a {
+  text-decoration: none;
+  color: black;
+}
+.header h3 a {
+  text-decoration: none;
+  color: black;
+}
 .header h3 {
   position: relative;
   left: 9rem;
