--- a/breeding/style.css
+++ b/breeding/style.css
@@ -266,3 +266,6 @@ input.check-toggle-round-flat:checked + label {
 input.check-toggle-round-flat:checked + label:after {
   margin-left: 44px;
 }
+#breed {
+  text-decoration: overline;
+}
