--- a/contact/style.css
+++ b/contact/style.css
@@ -20,7 +20,7 @@ header {
   gap: 3rem;
   position: relative;
   font-size: 1.2rem;
-  left: 21rem;
+  left: 25.3rem;
   top: 0.8rem;
   color: white;
 }
@@ -47,6 +47,8 @@ header h3 {
 }
 .content {
   width: 50%;
+  position: relative;
+  left: 2rem;
 }
 .content h1 {
   color: white;
@@ -178,8 +180,8 @@ input:not(:focus):valid ~ .floating-label {
 }
 .right {
   position: relative;
-  left: 45rem;
-  width: 45%;
+  left: 50.5rem;
+  width: 40%;
   bottom: 18.5rem;
 
   height: 2rem;
@@ -333,4 +335,10 @@ input.check-toggle-round-flat:checked + label {
 
 input.check-toggle-round-flat:checked + label:after {
   margin-left: 44px;
+}
+#logo {
+  position: absolute;
+  top: -2.5rem;
+  left: 6.5rem;
+  width: 8rem;
 }
