--- a/gaits/style.css
+++ b/gaits/style.css
@@ -18,7 +18,7 @@ header {
   gap: 3rem;
   position: relative;
   font-size: 1.2rem;
-  left: 21rem;
+  left: 25.3rem;
   top: 0.8rem;
   color: black;
 }
@@ -297,4 +297,10 @@ input.check-toggle-round-flat:checked + label {
 
 input.check-toggle-round-flat:checked + label:after {
   margin-left: 44px;
+}
+#logo {
+  position: absolute;
+  top: -2.5rem;
+  left: 6.5rem;
+  width: 8rem;
 }
