--- a/homePage/style.css
+++ b/homePage/style.css
@@ -27,7 +27,7 @@ header h3 a {
   gap: 3rem;
   position: relative;
   font-size: 1.2rem;
-  left: 21rem;
+  left: 25.3rem;
   top: 0.8rem;
   color: white;
   text-decoration: none;
@@ -475,4 +475,10 @@ input.check-toggle-round-flat:checked + label {
 
 input.check-toggle-round-flat:checked + label:after {
   margin-left: 44px;
+}
+#logo {
+  position: absolute;
+  top: -0.5rem;
+  left: 6.5rem;
+  width: 8rem;
 }
